--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="VjkSwap"
+      name="VjkSwapp"
       content="ERC-20 Playground"
     />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>VjkSwap</title>
+    <title>VjkSwapp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
